<resources>
    <string name="freaks_title">Freaks screen</string>
    <string name="skills_btn">Skills</string>
    <string name="projects_btn">Projects</string>
    <string name="resetBtn">Reset</string>
    <string name="androidCheckBox">Android</string>
    <string name="iosCheckBox">iOS</string>
    <string name="cevaCheckBox">Ceva</string>
    <string name="altcevaCheckBox">Altceva</string>
    <string name="applyFiltersBtn">Apply</string>
    <string name="app_name">freaks-details-screen</string>
    <string name="description_template">
        Lorem ipsum dolor sit amet, consecte adipiscing elit. Aenean commodo eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis part montes, nascetur ridiculus mus.
    </string>
    <string name="title_template">%1$s - %2$s</string>
    <string name="skills_template">Skills: %1$s</string>
    <string name="projects_template">Projects: %1$s</string>
    <string name="level_project">Level: %1$s</string>
    <string name="profile_image">profile_image</string>
    <string name="name_template">%1$s %2$s</string>
    <string name="back_button">back button</string>
    <string name="profile_picture">profile picture</string>
    <string name="details_fragment_label">{$firstName}</string>
</resources>
